--- a/hume-alerting/Chart.yaml
+++ b/hume-alerting/Chart.yaml
@@ -2,15 +2,15 @@ apiVersion: v2
 name: hume-alerting
 description: A Helm chart for Kubernetes
 type: application
-version: "2.16.9"
-appVersion: "2.16.9"
+version: "2.17.0-RC1"
+appVersion: "2.17.0-RC1"
 dependencies:
   - name: postgresql
-    version: 11.9.1
+    version: 12.1.5
     repository: https://charts.bitnami.com/bitnami
     alias: postgresqlAlertingController
   - name: postgresql
-    version: 11.9.1
+    version: 12.1.5
     repository: https://charts.bitnami.com/bitnami
     alias: postgresqlAlertingOperator
   - name: kafka
