--- a/hume-helm/Chart.yaml
+++ b/hume-helm/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: hume
 home: https://www.graphaware.com
-version: "2.16.9"
-appVersion: "2.16.9"
+version: "2.17.0-RC1"
+appVersion: "2.17.0-RC1"
 type: application
 icon: https://s3.eu-west-1.amazonaws.com/graphaware.com/favicon.ico
 keywords:
@@ -21,8 +21,13 @@ dependencies:
       repository: https://charts.bitnami.com/bitnami
       alias: postgresqlOrchestra
       condition: postgresqlOrchestra.enabled
+    - name: postgresql
+      version: 11.9.1
+      repository: https://charts.bitnami.com/bitnami
+      alias: postgresqlEventStore
+      condition: postgresqlEventStore.enabled
     - name: keycloak
-      version: 10.1.0
+      version: 13.0.4
       repository: https://charts.bitnami.com/bitnami
       alias: keycloak
       condition: keycloak.enabled
@@ -31,7 +36,9 @@ dependencies:
       repository: "https://helm.neo4j.com/neo4j"
       condition: neo4j.enabled
       alias: neo4j
+      tags:
+        - neo4j
     - name: hume-alerting
-      version: "2.16.9"
+      version: "2.17.0-RC1"
       repository: "https://docker.graphaware.com/chartrepo/public" 
       condition: alerting.enabled
