--- a/hume-helm/values.yaml
+++ b/hume-helm/values.yaml
@@ -2,6 +2,8 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+### Tags for dependencies
+
 ### Global parameters ###
 baseDomain: ""
 imagePullSecrets:
@@ -22,8 +24,10 @@ podAnnotations: {}
 # Used to have predictable service name to configure networking between API and Postgres Core
 postgresql-core-reference: &postgresql_core_reference postgresql-core
 postgresql-orchestra-reference: &postgresql_orchestra_reference postgresql-orchestra
-repositoryBase: "docker.graphaware.com/internal/"
+postgresql-eventstore-reference: &postgresql_eventstore_reference postgresql-eventstore
+
 humeCoreBaseRepository: "docker.graphaware.com/hume-core/"
+humeAnnotateBaseRepository: "docker.graphaware.com/hume-eventstore/"
 imagePullPolicy: "Always"
 tiers:
   discover:
@@ -89,6 +93,8 @@ api:
     driver:
       transaction:
         timeout: 90000
+  features:
+    mde: false
   probes:
     livenessProbe:
       inititalDelaySeconds: 0
@@ -101,6 +107,32 @@ api:
       initialDelaySeconds: 30
       periodSeconds: 5
       failureThreshold: 60
+eventstore:
+  enabled: false
+  image:
+    name: "hume-eventstore"
+    tag: ""
+  port: 9090
+  deployment:
+    replicas: ""
+  service:
+    type: NodePort
+  app:
+    name: hume-eventstore
+  username: hume
+  password: megaSecretPwd
+  # probes:
+  #   livenessProbe:
+  #     inititalDelaySeconds: 0
+  #     periodSeconds: 10
+  #     failureThreshold: 3
+  #   startupProbe:
+  #     # use a startup probe so the API has the time to perform db migrations before the livenessProbe kicks in.
+  #     # startup probe will fail after (failureTreshold * periodSeconds )
+  #     # by default we use a large value of 300 seconds for slow environments
+  #     initialDelaySeconds: 30
+  #     periodSeconds: 5
+  #     failureThreshold: 60
 neo4j:
   enabled: true
   services:
@@ -193,6 +225,16 @@ postgresqlOrchestra:
         password: pgsqls3cr3t
         servicePort: 5432
   fullnameOverride: *postgresql_orchestra_reference
+postgresqlEventStore:
+  enabled: true
+  global:
+    postgresql:
+      auth:
+        database: eventstore
+        username: eventstore
+        password: eventstore
+        servicePort: 5432
+  fullnameOverride: *postgresql_eventstore_reference
 ### RBAC parameters
 serviceAccount:
   # Specifies whether a service account should be created
