--- a/hume-helm/templates/eventstore-configmap.yml
+++ b/hume-helm/templates/eventstore-configmap.yml
@@ -1,3 +1,4 @@
+{{- if .Values.eventstore.enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -12,4 +13,5 @@ data:
   SPRING_DATASOURCE_URL: "jdbc:postgresql://postgresql-eventstore:{{ .Values.postgresqlEventStore.global.postgresql.auth.servicePort }}/{{ .Values.postgresqlEventStore.global.postgresql.auth.database }}"
   SPRING_DATASOURCE_USERNAME: {{ .Values.postgresqlEventStore.global.postgresql.auth.username }}
   SPRING_DATASOURCE_PASSWORD: {{ .Values.postgresqlEventStore.global.postgresql.auth.password }}
+{{- end }}
 ---
