--- a/hume-helm/templates/orchestra-statefulset.yml
+++ b/hume-helm/templates/orchestra-statefulset.yml
@@ -65,50 +65,22 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ include "hume-helm.fullname" . }}-orchestra-configmap
-          # env:
-          #   {{- if .Values.orchestra.persistence.enabled }}
-          #   - name: "orchestra.tmpdir"
-          #     value: "{{ .Values.orchestra.persistence.mountPath }}"
-          #   {{- end }}
+          env:
+            {{- with .Values.orchestra.env }}
+            {{- toYaml . | nindent 12 }}
+            {{- end }}
           resources:
             {{- toYaml .Values.orchestra.resources | nindent 12 }}
           volumeMounts:
-            {{- if .Values.orchestra.persistence.enabled }}
-            - name: data
-              mountPath: {{ .Values.orchestra.persistence.mountPath }}
-              subPath: {{ .Values.orchestra.persistence.subPath }}
+            {{- with .Values.orchestra.volumeMounts }}
+            {{- toYaml . | nindent 12 }}
             {{- end }}
       volumes:
-{{- if and .Values.orchestra.persistence.enabled .Values.orchestra.persistence.existingClaim }}
-        - name: data
-          persistentVolumeClaim:
-{{- with .Values.orchestra.persistence.existingClaim }}
-            claimName: {{ tpl . $ }}
-{{- end }}
-{{- else if not .Values.orchestra.persistence.enabled }}
-        - name: data
-          emptyDir: {}
-{{- else if and .Values.orchestra.persistence.enabled (not .Values.orchestra.persistence.existingClaim) }}
+        {{- with .Values.orchestra.volumes }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
   volumeClaimTemplates:
-    - metadata:
-        name: data
-      {{- with .Values.orchestra.persistence.annotations }}
-        annotations:
-        {{- range $key, $value := . }}
-          {{ $key }}: {{ $value }}
-        {{- end }}
-      {{- end }}
-      spec:
-        accessModes:
-        {{- range .Values.orchestra.persistence.accessModes }}
-          - {{ . | quote }}
-        {{- end }}
-        resources:
-          requests:
-            storage: {{ .Values.orchestra.persistence.size | quote }}
-        {{ include "common.storage.class" (dict "persistence" .Values.orchestra.persistence "global" .Values.global) }}
-        {{- if .Values.orchestra.persistence.selector }}
-        selector: {{- include "common.tplvalues.render" (dict "value" .Values.orchestra.persistence.selector "context" $) | nindent 10 }}
-        {{- end -}}
-{{- end }}
+    {{- with .Values.orchestra.volumeClaimTemplates }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 {{- end }}
