--- a/hume-helm/Chart.yaml
+++ b/hume-helm/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: hume
 home: https://www.graphaware.com
-version: "2.17.0"
+version: "2.17.1-alpha1"
 appVersion: "2.17.0"
 type: application
 icon: https://s3.eu-west-1.amazonaws.com/graphaware.com/favicon.ico
