--- a/hume-helm/templates/api-configmap.yaml
+++ b/hume-helm/templates/api-configmap.yaml
@@ -17,7 +17,7 @@ data:
   {{- if .Values.api.features.mde }}
   hume.feature.mde.enabled: "true"
   {{- end }}
-  {{- if .Values.eventstore.enabled }}
+  {{- if .Values.eventstore.enabled -}}
   hume.eventstore.hostname: "{{ .Values.eventstore.app.name }}"
   hume.eventstore.port: "{{ .Values.eventstore.port }}"
   hume.eventstore.username: "{{ .Values.eventstore.username }}"
