--- a/hume-helm/templates/api-configmap.yaml
+++ b/hume-helm/templates/api-configmap.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -14,16 +15,16 @@ data:
   spring.datasource.password: {{ .Values.postgresqlCore.global.postgresql.auth.password }}
   hume.orchestra.uri: "http://{{ include "hume-helm.fullname" . }}-orchestra:{{ .Values.orchestra.port }}"
   hume.driver.neo4j.transaction.timeout: "{{ .Values.api.neo4j.driver.transaction.timeout }}"
-  {{- if .Values.api.features.mde -}}
+  {{- if .Values.api.features.mde }}
   hume.feature.mde.enabled: "true"
   {{- end }}
-  {{- if .Values.eventstore.enabled -}}
+  {{- if .Values.eventstore.enabled }}
   hume.eventstore.hostname: "{{ .Values.eventstore.app.name }}"
   hume.eventstore.port: "{{ .Values.eventstore.port }}"
   hume.eventstore.username: "{{ .Values.eventstore.username }}"
   hume.eventstore.password: "{{ .Values.eventstore.password }}"
   {{- end }}
-  {{- if .Values.keycloak.enabled -}}
+  {{- if .Values.keycloak.enabled }}
   hume.security.provider: 'keycloak'
   {{- if .Values.ingress.enabled }}
   keycloak.auth-server-url: "{{ .Values.ingress.protocol.scheme }}://{{ .Values.keycloak.app.name }}.{{ required "Missing required baseDomain parameter!" .Values.baseDomain }}"
