--- a/hume-helm/templates/eventstore-deployment.yml
+++ b/hume-helm/templates/eventstore-deployment.yml
@@ -51,11 +51,11 @@ spec:
             - configMapRef:
                 name: {{ include "hume-helm.fullname" . }}-eventstore-configmap
           env:
-            {{- with .Values.api.env }}
+            {{- with .Values.eventstore.env }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
           volumeMounts:
-            {{- with .Values.api.volumeMounts }}
+            {{- with .Values.eventstore.volumeMounts }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
           resources:
