--- a/hume-orchestra/templates/service.yaml
+++ b/hume-orchestra/templates/service.yaml
@@ -12,7 +12,7 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "hume-orchestra.selectorLabels" . | nindent 4 }}
+    app: {{ include "hume-orchestra.fullname" . }}-controller
 ---
 apiVersion: v1
 kind: Service
