--- a/hume-helm/Chart.yaml
+++ b/hume-helm/Chart.yaml
@@ -4,7 +4,7 @@ home: https://www.graphaware.com
 version: "2.17.2"
 appVersion: "2.17.2"
 type: application
-icon: https://s3.eu-west-1.amazonaws.com/graphaware.com/favicon.ico
+icon: https://s3.eu-west-1.amazonaws.com/www-graphaware-com.infra.graphaware.com/favicon.ico
 keywords:
   - graphaware
   - hume
