--- a/hume-alerting/Chart.yaml
+++ b/hume-alerting/Chart.yaml
@@ -3,7 +3,7 @@ name: hume-alerting
 description: A Helm chart for Kubernetes
 type: application
 version: "2.18.0-SNAPSHOT"
-appVersion: "2.18.0-SNAPSHOT"
+appVersion: "2.18.0"
 dependencies:
   - name: postgresql
     version: 12.1.5
