move alerting client enable to configmap

--- a/hume-helm/templates/api-configmap.yaml
+++ b/hume-helm/templates/api-configmap.yaml
@@ -62,4 +62,8 @@ data:
   {{- end }}
   {{- end }}
   {{- end }}
+  # Alerting
+  {{- if .Values.alerting.enabled }}
+  alerting.client.enabled: 'true'
+  {{- end }}
 ---
