--- a/hume-alerting/Chart.yaml
+++ b/hume-alerting/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: hume-alerting
 description: A Helm chart for Kubernetes
 type: application
-version: "2.18.0-SNAPSHOT"
+version: "2.18.0"
 appVersion: "2.18.0"
 dependencies:
   - name: postgresql
