--- a/hume-helm/Chart.yaml
+++ b/hume-helm/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: hume
 home: https://www.graphaware.com
-version: "2.18.0-SNAPSHOT"
+version: "2.18.0"
 appVersion: "2.18.0"
 type: application
 icon: https://s3.eu-west-1.amazonaws.com/www-graphaware-com.infra.graphaware.com/favicon.ico
