--- a/hume-helm/templates/deployment.yaml
+++ b/hume-helm/templates/deployment.yaml
@@ -37,7 +37,7 @@ spec:
         - name: {{ include "hume-helm.fullname" . }}-web
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.humeCoreBaseRepository }}{{ .Values.web.image.name }}:{{ .Values.web.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.humeCoreBaseRepository }}{{ .Values.web.image.name }}:{{ include "webImageTag" . }}"
           imagePullPolicy: {{ .Values.imagePullPolicy }}
           ports:
             - name: web
@@ -98,7 +98,7 @@ spec:
         - name: {{ include "hume-helm.fullname" . }}-api
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.humeCoreBaseRepository }}{{ .Values.api.image.name }}:{{ .Values.api.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.humeCoreBaseRepository }}{{ .Values.api.image.name }}:{{ include "apiImageTag" . }}"
           imagePullPolicy: {{ .Values.imagePullPolicy }}
           ports:
             - name: api
